--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "rollup": "^0.65.2",
     "rollup-plugin-typescript2": "^0.16.1",
     "rollup-plugin-uglify": "^4.0.0",
+    "testcafe": "^0.22.0",
     "tslint": "^5.5.0",
     "typescript": "^3.0.3",
     "typescript-formatter": "^7.1.0"
