--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bdc",
   "description": "Ben's DOM Clobberer",
+  "license": "MIT",
   "keywords": [],
   "version": "0.0.1",
   "author": "Ben Mather <bwhmather@bwhmather.com> (bwhmather.com)",
