--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "build": "rollup -c",
     "pretest": "npm run build",
     "test": "testcafe firefox:headless tests/index.js --no-color",
-    "tslint": "tslint src/*.ts src/*/*.ts"
+    "tslint": "tslint src/*.ts src/*/*.ts",
+    "prepack": "npm run build"
   },
   "files": [
     "dist/*.js",
