--- a/package.json
+++ b/package.json
@@ -31,9 +31,13 @@
     "prepack": "npm run build"
   },
   "files": [
-    "dist/*.js",
-    "dist/*.mjs",
-    "dist/*.d.ts",
-    "dist/**/*.d.ts"
+    "dist/bdc.js",
+    "dist/bdc.js.map",
+    "dist/bdc.min.js",
+    "dist/bdc.min.js.map",
+    "dist/bdc.mjs",
+    "dist/bdc.mjs.map",
+    "dist/bdc.umd.js",
+    "dist/bdc.umd.js.map",
   ]
 }
