--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
     "dist/bdc.mjs",
     "dist/bdc.mjs.map",
     "dist/bdc.umd.js",
-    "dist/bdc.umd.js.map",
+    "dist/bdc.umd.js.map"
   ]
 }
