Add generated typescript declaration file to manifest.

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dist/bdc.mjs",
     "dist/bdc.mjs.map",
     "dist/bdc.umd.js",
-    "dist/bdc.umd.js.map"
+    "dist/bdc.umd.js.map",
+    "dist/types/*.d.ts"
   ]
 }
