--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ sudo: false
 addons:
   firefox: latest
 
+script:
+  - "npm run-script test"
+  - "npm run-script tslint"
+
 deploy:
   provider: npm
   skip_cleanup: true
