--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "dependencies": {},
   "devDependencies": {
     "rollup": "^1.31.1",
+    "rollup-plugin-terser": "^5.2.0",
     "rollup-plugin-typescript2": "^0.25.3",
-    "rollup-plugin-uglify": "^6.0.4",
     "testcafe": "^1.8.2",
     "tslint": "^5.20.1",
     "typescript": "^3.7.4",
