--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build": "rollup -c",
     "pretest": "npm run build",
     "test": "testcafe firefox:headless tests/index.js --no-color",
-    "tslint": "tslint src/*.ts src/*/*.ts",
+    "tslint": "tslint -p tsconfig.json src/*.ts src/*/*.ts",
     "prepack": "npm run build"
   },
   "files": [
