Use local version of bdc for examples

--- a/examples/todomvc/package.json
+++ b/examples/todomvc/package.json
@@ -4,7 +4,7 @@
   "description": "ToDoMVC - BDC",
   "author": "Ben Mather <bwhmather@bwhmather.com> (bwhmather.com)",
   "dependencies": {
-    "bdc": "^0.1.4",
+    "bdc": "file:../..",
     "todomvc-app-css": "^2.0.0",
     "todomvc-common": "^1.0.1"
   },
