--- a/examples/todomvc/package.json
+++ b/examples/todomvc/package.json
@@ -9,11 +9,11 @@
     "todomvc-common": "^1.0.1"
   },
   "devDependencies": {
-    "rollup": "^1.26.0",
-    "rollup-plugin-typescript2": "^0.24.3",
-    "rollup-plugin-uglify": "^6.0.3",
-    "tslint": "^5.20.0",
-    "typescript": "^3.6.4"
+    "rollup": "^2.2.0",
+    "rollup-plugin-terser": "^5.3.0",
+    "rollup-plugin-typescript2": "^0.27.0",
+    "tslint": "^6.1.0",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "build": "rollup -c",
