--- a/examples/todomvc/package.json
+++ b/examples/todomvc/package.json
@@ -12,6 +12,7 @@
     "rollup": "^2.2.0",
     "rollup-plugin-terser": "^5.3.0",
     "rollup-plugin-typescript2": "^0.27.0",
+    "@rollup/plugin-node-resolve": "7.1.3",
     "tslint": "^6.1.0",
     "typescript": "^3.8.3"
   },
