--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,32 @@
 language: node_js
 node_js: "stable"
-sudo: false
-dist: focal
+dist: bionic
+addons:
+  apt:
+    packages:
+      # These are required to run webkit
+      - libwoff1
+      - libopus0
+      - libwebp6
+      - libwebpdemux2
+      - libenchant1c2a
+      - libgudev-1.0-0
+      - libsecret-1-0
+      - libhyphen0
+      - libgdk-pixbuf2.0-0
+      - libegl1
+      - libgles2
+      - libevent-2.1-6
+      - libnotify4
+      - libxslt1.1
+      - libvpx5
+      # gstreamer and plugins to support video playback in WebKit.
+      - gstreamer1.0-gl
+      - gstreamer1.0-plugins-base
+      - gstreamer1.0-plugins-good
+      - gstreamer1.0-plugins-bad
+      # This is required to run chromium
+      - libgbm1
 
 env:
   - BROWSER=firefox
