--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   "main": "dist/bdc.umd.js",
   "module": "dist/bdc.mjs",
   "jsnext:main": "dist/bdc.mjs",
-  "types": "dist/types/index.d.ts",
+  "types": "dist/index.d.ts",
   "devDependencies": {
     "@playwright/test": "^1.26.1",
+    "@rollup/plugin-typescript": "^8.5.0",
     "playwright": "^1.26.1",
-    "prettier": "^2.1.2",
-    "rollup": "^2.29.0",
+    "prettier": "^2.7.1",
+    "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.27.3",
     "tslint": "^6.1.2",
-    "typescript": "^3.9.7"
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "build": "rollup -c",
