--- a/package.json
+++ b/package.json
@@ -17,18 +17,20 @@
   "devDependencies": {
     "@playwright/test": "^1.26.1",
     "@rollup/plugin-typescript": "^8.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
+    "eslint": "^8.24.0",
     "playwright": "^1.26.1",
     "prettier": "^2.7.1",
     "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2",
-    "tslint": "^6.1.2",
     "typescript": "^4.8.4"
   },
   "scripts": {
     "build": "rollup -c",
     "pretest": "npm run build",
     "test": "playwright test",
-    "tslint": "tslint -p tsconfig.json src/*.ts src/*/*.ts",
+    "eslint": "eslint src/*.ts",
     "prettier": "prettier --check src tests",
     "prettier:fix": "prettier --write src tests",
     "prepack": "npm run build"
