--- a/examples/todomvc/package.json
+++ b/examples/todomvc/package.json
@@ -9,16 +9,21 @@
     "todomvc-common": "^1.0.1"
   },
   "devDependencies": {
-    "rollup": "^2.2.0",
-    "rollup-plugin-terser": "^5.3.0",
-    "rollup-plugin-typescript2": "^0.27.0",
     "@rollup/plugin-node-resolve": "7.1.3",
-    "tslint": "^6.1.0",
-    "typescript": "^3.8.3"
+    "@rollup/plugin-typescript": "^8.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
+    "eslint": "^8.24.0",
+    "prettier": "^2.7.1",
+    "rollup": "^2.79.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "build": "rollup -c",
     "pretest": "npm run build",
-    "tslint": "tslint src/*.ts src/*/*.ts"
+    "eslint": "eslint src/*.ts",
+    "prettier": "prettier --check src",
+    "prettier:fix": "prettier --write src"
   }
 }
